<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.saitama.transportation.mobile.android.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding_middle">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center_horizontal"
                android:text="@string/payment_description" />

            <EditText
                android:id="@+id/cardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/payment_name_hint"
                android:lines="1" />

            <EditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_number_hint"
                android:inputType="number"
                android:lines="1"
                android:maxLength="16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_exp_date_hint" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_small" />

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/cardValidationNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_validation_number_hint"
                android:lines="1"
                android:maxLength="3"
                android:inputType="number"/>

            <TextView
                android:id="@+id/error"
                style="@style/Base.TextAppearance.AppCompat.16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:gravity="center_horizontal"
                android:textColor="@color/holo_red_light"
                android:visibility="invisible"
                tools:text="Auth error"
                tools:visibility="visible" />

            <Button
                android:id="@+id/orderButton"
                style="@style/PositiveFlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/payment_order_button_text" />

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>