<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_middle">

        <TextView
            android:id="@+id/title"
            style="@style/Base.TextAppearance.AppCompat.20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/login_description" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="128" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="32" />

        <TextView
            android:id="@+id/error"
            style="@style/Base.TextAppearance.AppCompat.16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:gravity="center_horizontal"
            android:textColor="@color/holo_red_light"
            android:visibility="invisible"
            tools:text="Auth error"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center">

            <Button
                android:id="@+id/loginButton"
                style="@style/PositiveFlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_login_button_text" />

            <Button
                android:id="@+id/registerButton"
                style="@style/PositiveFlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_register_button_text" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>