<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small"
    android:minWidth="300dp">

    <TextView
        android:id="@+id/title"
        style="@style/Base.TextAppearance.AppCompat.18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Name of place"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginTop="32dp">
        <Button
            android:id="@+id/cancelButton"
            style="@style/PositiveFlatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/rentButton"
            style="@style/PositiveFlatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_dialog_rent_button_text" />
        </LinearLayout>

</LinearLayout>